update changepass & function docs
