# resources/lang/en/message.php
@@ -1,0 +1,7 @@
+<?php
+return [
+    'signed_out' => 'Member successfully signed out',
+    'change_pass' => 'Member successfully changed password',
+    'old_pass' => 'New password can not be the old password!',
+    'not_same_pass' => 'Old password is incorrect!',
+];
